--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0"
